@@ -39,6 +39,7 @@ Release 0.20.3 - Unreleased
    HBASE-2068  MetricsRate is missing "registry" parameter
                (Lars George and Gary Helmling via Stack)
    HBASE-2035  Binary values are formatted wrong in shel
+   HBASE-2094  hbase-2037 breaks mapreduce jobs going from 0.20.2 to 0.20.3
 
   IMPROVEMENTS
    HBASE-1970  Export does one version only; make it configurable how many
